infrastructure/vm/fluxcd-notifications/repo-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  type: ClusterIP
  selector:
    app: notification-controller
  ports:
  - name: http-webhook
    port: 80
    protocol: TCP
    targetPort: http-webhook
